<resources>
    <string name="app_name">PokerComb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Заголовок</string>
    <string name="action_settings">Настройки</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="probability">вероятность</string>
    <string name="card_pic">card_pic</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="answer">Ответ</string>
    <string name="continue_button">Продолжить</string>
    <string name="best_combo">Лучшая комбинация: </string>
    <string name="answered_in">Отвечено за</string>
    <string name="average_speed">Средняя скорость: </string>
    <string name="accuracy">Точность</string>
    <string name="recognition_game">Игра</string>
    <string name="poker_combo">Poker Combo</string>
    <string name="banner_ad_unit_id">ca-app-pub-6889774123711089/7934848429</string>

    <string name="facebook_app_id" translatable="false">410078536422719</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb410078536422719</string>
</resources>
